--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="intro-text">
                         <h1 class="name">Arquitecto en Cáceres</h1>
                         <hr class="star-light">
-                        <span class="skills">Tel: 678268186 / Email: hola@urvian.es</span>
+                        <span class="skills">Tel: <a href="tel:+34678268186">678268186</a> / Email: chrishurvi@gmail.com</span>
                     </div>
                 </div>
             </div>
@@ -92,11 +92,11 @@
                     </div>
                 <div class="footer-col col-md-4">
                     <h3>Teléfono</h3>
-                    <p>678268186</p>
+                    <p><a href="tel:+34678268186">678268186</a></p>
                 </div>
                 <div class="footer-col col-md-4">
                     <h3>Correo electrónico</h3>
-                    <p>hola@urvian.es</p>
+                    <p>chrishurvi@gmail.com</p>
                 </div>
             </div>
             </div>
