--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Arquitecto en Cáceres">
     <meta name="author" content="">
 
-    <title>Arquitecto en cáceres- URVIAN</title>
+    <title>Servicios técnicos de arquitectura e interiorismo</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -52,6 +52,12 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
+                        <a href="#servicios">Servicios</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#compromiso">Compromiso</a>
+                    </li>
+                    <li class="page-scroll">
                         <a href="#contact">Contacto</a>
                     </li>
                 </ul>
@@ -68,14 +74,135 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <h1 class="name">Arquitecto en Cáceres</h1>
+                        <h1 class="name">Servicios técnicos de arquitectura e interiorismo</h1>
                         <hr class="star-light">
-                        <span class="skills">Tel: <a href="tel:+34678268186">678268186</a> / Email: chrishurvi@gmail.com</span>
+                        <span class="skills">Tel: <a href="tel:+34678268186">678268186</a> / Email: urvian@gmail.com</span>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+<section id="servicios">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>Servicios</h2>
+                <hr class="star-primary">
+            </div>
+        </div>
+        <div class="row text-center">
+            <div class="col-sm-4 portfolio-item ">
+                <h3>Interiorismo</h3>
+                <p>
+                    Adaptamos tu vivienda a tus necesidades estéticas y funcionales.
+                </p>
+            </div>
+            <div class="col-sm-4 portfolio-item">
+                <h3>
+                    DISEÑO COMERCIAL
+                </h3>
+                <p>
+                    Planificamos los espacios aplicando estrategias de marketing
+                    al diseño de tu local.
+                </p>
+            </div>
+            <div class="col-sm-4 portfolio-item">
+                <h3>ESTUDIO DE VENTA O ALQUILER</h3>
+                <p>
+                    Enfocamos la decoración y diseño de inmuebles destinados a
+                    su venta o alquiler a aumentar su valor y facilitar la
+                    salida al mercado.
+                </p>
+            </div>
+        </div>
+        <div class="row text-center">
+            <div class="col-sm-4 portfolio-item">
+                <h3>ACCESIBILIDAD</h3>
+                <p>
+                    Eliminamos las barreras arquitectónicas que impidan el uso
+                    funcional de tu vivienda.
+                </p>
+            </div>
+            <div class="col-sm-4 portfolio-item">
+                <h3>CERTIFICADOS</h3>
+                <p>
+                    Eficiencia energética <br />
+                    Cédula de habitabilidad<br />
+                    Valoraciones inmobiliarias<br />
+                </p>
+            </div>
+            <div class="col-sm-4 portfolio-item">
+                <h3>ASESORÍAS ENERGÉTICAS</h3>
+                <p>Estudiamos tus consumos y el entorno constructivo para
+                    ofrecer mejoras, optimizando la demanda energética.
+                </p>
+            </div>
+        </div>
+        <div class="row text-center">
+            <div class="col-sm-4 portfolio-item">
+                <h3>COMPARADOR DE OBRAS</h3>
+                <p>
+                    Estudiamos tu obra, solicitamos y comparamos presupuestos de
+                    diferentes empresas contructoras.
+                </p>
+            </div>
+            <div class="col-sm-4 portfolio-item">
+                <h3>DIRECCIÓN DE OBRA</h3>
+                <p>
+                    Nos ocupamos de la gestión y del control económico y técnico
+                    de la obra, garantizando su calidad y correcta ejecución.
+                </p>
+            </div>
+            <div class="col-sm-4 portfolio-item">
+                <h3>PERITACIONES</h3>
+                <p>
+                    Analizamos las lesiones empleando tecnología especializada,
+                    y restablecemos su funcionalidad y aspecto original.
+                </p>
+            </div>
+        </div>
+        </div>
+    </div>
+</section>
+<!-- About Section -->
+<section class="success" id="compromiso">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>Compromiso</h2>
+                <hr class="star-light">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4">
+                <p>
+                    Desde URVIAN buscamos la satisfación del cliente, dándole la
+                    opción de tener a alguien a quien poder consultar en todo
+                    momento, que le aclare cualquier duda y le asesore,
+                    proporcionando un trato cercanoy mirando por su beneficio
+                    técnico y económico.
+                </p>
+            </div>
+            <div class="col-lg-4">
+                <p>
+                    Nuestro afán por dar el mejor servicio nos lleva a estar en
+                    un continuo aprendizaje que nos permite conocer los
+                    materiales y sistemas constructivos que se van incorporando
+                    al mercado, pudiendo aplicar las metodologías que más se
+                    ajusten a cada caso.
+                </p>
+            </div>
+            <div class="col-lg-4">
+                <p>
+                    Además contamos con avanzados programas informáticos e
+                    instrumental técnico para la diagnosis de patologías, que
+                    nos permite conocer las causas de lesiones (grietas,
+                    fisuras, humedades, mohos) de una forma rápida y eficaz.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 
     <!-- Contact Section -->
     <section id="contact">
@@ -96,7 +223,7 @@
                 </div>
                 <div class="footer-col col-md-4">
                     <h3>Correo electrónico</h3>
-                    <p>chrishurvi@gmail.com</p>
+                    <p>urvian@gmail.com</p>
                 </div>
             </div>
             </div>
