--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="intro-text">
                         <h1 class="name">Servicios técnicos de arquitectura e interiorismo</h1>
                         <hr class="star-light">
-                        <span class="skills">Tel: <a href="tel:+34678268186">678268186</a> / Email: urvian@gmail.com</span>
+                        <span class="skills">Tel: <a href="tel:+34678268186">678268186</a> / Email: info.urvian@gmail.com</span>
                     </div>
                 </div>
             </div>
@@ -223,7 +223,7 @@
                 </div>
                 <div class="footer-col col-md-4">
                     <h3>Correo electrónico</h3>
-                    <p>urvian@gmail.com</p>
+                    <p>info.urvian@gmail.com</p>
                 </div>
             </div>
             </div>
